--- a/1_tables.ipynb
+++ b/1_tables.ipynb
@@ -60,7 +60,9 @@
       " [12 15 16]\n",
       " [ 6  6  4]]\n",
       "(3, 3)\n",
-      "9\n"
+      "9\n",
+      "int64\n",
+      "<class 'numpy.ndarray'>\n"
      ]
     }
    ],
@@ -74,7 +76,9 @@
     "print(b.shape)\n",
     "print(b.size)\n",
     "assert np.prod(a.shape) == a.size\n",
-    "assert len(b.shape) == b.ndim"
+    "assert len(b.shape) == b.ndim\n",
+    "print(b.dtype)\n",
+    "print(type(b))"
    ]
   },
   {
@@ -157,9 +161,9 @@
       " [0.0e+000 4.9e-324 9.9e-324 1.5e-323 2.0e-323 2.5e-323 3.0e-323 3.5e-323\n",
       " 4.0e-323 4.4e-323]\n",
       "Тоже мусор, но разложенный по-другому:\n",
-      " [[ 1.28822975e-231 -1.73059551e-077  2.96439388e-323  0.00000000e+000]\n",
-      " [ 1.73765864e-152  4.47032019e-038  6.19772580e-091  5.88362143e-062]\n",
-      " [ 2.36816042e+179  5.24825030e+174  3.99910963e+252  8.38733469e-309]]\n"
+      " [[4.67443412e-310 0.00000000e+000 0.00000000e+000 0.00000000e+000]\n",
+      " [0.00000000e+000 0.00000000e+000 0.00000000e+000 0.00000000e+000]\n",
+      " [0.00000000e+000 0.00000000e+000 0.00000000e+000 0.00000000e+000]]\n"
      ]
     }
    ],
@@ -265,10 +269,10 @@
       "[3.14159265 3.14159265 3.14159265 3.14159265 3.14159265 3.14159265\n",
       " 3.14159265 3.14159265]\n",
       "«Пустой» b:\n",
-      " [ 1.28822975e-231-2.32034922e+077j -3.95252517e-323+0.00000000e+000j\n",
-      "  2.12199579e-314+0.00000000e+000j  0.00000000e+000+0.00000000e+000j\n",
-      "  1.75871011e-310+3.50977866e+064j  0.00000000e+000+4.34584738e-311j\n",
-      "              nan            +nanj  3.50977942e+064+1.11686770e-308j]\n",
+      " [ 6.92141936e-310+4.67443369e-310j  4.67443367e-310+9.57502152e-251j\n",
+      "  6.92141430e-310+6.92141428e-310j -1.30342565e-207+6.92141436e-310j\n",
+      "  4.67443366e-310-9.95359165e+102j  6.92141436e-310+6.92141435e-310j\n",
+      "  1.41176394e-084+6.92141813e-310j  4.67443368e-310+5.53274223e-186j]\n",
       "Заполненный b:\n",
       " [0.        +3.14159265j 0.        +3.14159265j 0.        +3.14159265j\n",
       " 0.        +3.14159265j 3.14159265+1.j         3.14159265+1.j\n",
@@ -626,7 +630,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:1: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/usr/lib/python3.6/site-packages/ipykernel_launcher.py:1: RuntimeWarning: invalid value encountered in sqrt\n",
       "  \"\"\"Entry point for launching an IPython kernel.\n"
      ]
     }
@@ -707,12 +711,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Поиск по упорядеченному массиву"
+    "### Некоторые векторные операции"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 1.]\n",
+      "[0. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[0,-1],[1,0]], dtype=np.float32)\n",
+    "z = np.array([1.0,0], dtype=np.float32)\n",
+    "print(x @ z)\n",
+    "print(x.dot(z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = np.array([1.0,1.0], dtype=np.float32)\n",
+    "x = np.array([0.0,1.0], dtype=np.float32)\n",
+    "print(np.inner(z, x))\n",
+    "print(np.inner(z, z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1.]\n",
+      " [0. 0.]]\n",
+      "[[0. 0.]\n",
+      " [0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = np.array([[0,1],[0,0]], dtype=np.float32)\n",
+    "print(e)\n",
+    "print(e.dot(e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.0\n",
+      "200.0\n",
+      "200.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.ones((100, 100), dtype=np.float32)\n",
+    "z = np.eye(100) * 2\n",
+    "print(np.trace(x))\n",
+    "# Сначала вычисляем матрицу произведения, затем её след\n",
+    "print(np.trace(x.dot(z)))\n",
+    "# Вычисляем след сразу, не вычисляя недиагональные элементы произведения двух матриц\n",
+    "print(np.einsum('ij,ji', x, z))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Поиск по упорядеченному массиву"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -799,24 +899,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1.  ,  1.1) (2.  ,  0.5) (3.14, 10. ) (4.  , -0.7)] [('x', '<f8'), ('y', '<f8')]\n",
-      "[1.   2.   3.14 4.  ] [ 1.1  0.5 10.  -0.7]\n"
+      "[(1., 1.52101, 13.64, 4.49, 1.1 , 71.78, 0.06, 8.75, 0., 0., 1.)\n",
+      " (2., 1.51761, 13.89, 3.6 , 1.36, 72.73, 0.48, 7.83, 0., 0., 1.)\n",
+      " (3., 1.51618, 13.53, 3.55, 1.54, 72.99, 0.39, 7.78, 0., 0., 1.)\n",
+      " (4., 1.51766, 13.21, 3.69, 1.29, 72.61, 0.57, 8.22, 0., 0., 1.)\n",
+      " (5., 1.51742, 13.27, 3.62, 1.24, 73.08, 0.55, 8.07, 0., 0., 1.)] [('id', '<f8'), ('n', '<f8'), ('Na', '<f8'), ('Mg', '<f8'), ('Al', '<f8'), ('Si', '<f8'), ('K', '<f8'), ('Ca', '<f8'), ('Ba', '<f8'), ('Fe', '<f8'), ('Type', '<f8')]\n",
+      "[1.52101 1.51761 1.51618 1.51766 1.51742] [13.64 13.89 13.53 13.21 13.27]\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "data = np.genfromtxt('file.dat', names=('x', 'y'))\n",
-    "print(data, data.dtype)\n",
-    "print(data['x'], data['y'])"
+    "names = (\"id\", \"n\", \"Na\", \"Mg\", \"Al\", \"Si\", \"K\", \"Ca\", \"Ba\", \"Fe\", \"Type\")\n",
+    "data = np.genfromtxt('glass.csv', delimiter=',', names=names)\n",
+    "print(data[0:5], data.dtype)\n",
+    "print(data['n'][0:5], data['Na'][0:5])"
    ]
   },
   {
@@ -828,35 +933,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      x     y\n",
-      "0  1.00   1.1\n",
-      "1  2.00   0.5\n",
-      "2  3.14  10.0\n",
-      "3  4.00  -0.7\n",
-      "0    1.00\n",
-      "1    2.00\n",
-      "2    3.14\n",
-      "3    4.00\n",
-      "Name: x, dtype: float64\n",
-      "x    1.0\n",
-      "y    1.1\n",
-      "Name: 0, dtype: float64\n"
+      "          n     Na    Mg    Al     Si     K    Ca   Ba   Fe  Type\n",
+      "id                                                               \n",
+      "1   1.52101  13.64  4.49  1.10  71.78  0.06  8.75  0.0  0.0     1\n",
+      "2   1.51761  13.89  3.60  1.36  72.73  0.48  7.83  0.0  0.0     1\n",
+      "3   1.51618  13.53  3.55  1.54  72.99  0.39  7.78  0.0  0.0     1\n",
+      "4   1.51766  13.21  3.69  1.29  72.61  0.57  8.22  0.0  0.0     1\n",
+      "5   1.51742  13.27  3.62  1.24  73.08  0.55  8.07  0.0  0.0     1\n",
+      "id\n",
+      "1    1.52101\n",
+      "2    1.51761\n",
+      "3    1.51618\n",
+      "4    1.51766\n",
+      "5    1.51742\n",
+      "Name: n, dtype: float64\n",
+      "n        1.52101\n",
+      "Na      13.64000\n",
+      "Mg       4.49000\n",
+      "Al       1.10000\n",
+      "Si      71.78000\n",
+      "K        0.06000\n",
+      "Ca       8.75000\n",
+      "Ba       0.00000\n",
+      "Fe       0.00000\n",
+      "Type     1.00000\n",
+      "Name: 1, dtype: float64\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv('file.dat', sep=' ', names=('x', 'y'))\n",
-    "print(data)\n",
-    "print(data.x)\n",
+    "names = (\"id\", \"n\", \"Na\", \"Mg\", \"Al\", \"Si\", \"K\", \"Ca\", \"Ba\", \"Fe\", \"Type\")\n",
+    "data = pd.read_csv('glass.csv', header=None, names=names, index_col=0)\n",
+    "print(data.head())\n",
+    "print(data.n.head())\n",
     "print(data.iloc[0])"
    ]
   },
@@ -876,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1274,7 @@
        "273.07037"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
