--- a/1_tables.ipynb
+++ b/1_tables.ipynb
@@ -121,6 +121,7 @@
       "[10  9  8  7  6  5  4  3  2  1  0]\n",
       "[0.         0.33333333 0.66666667 1.         1.33333333 1.66666667\n",
       " 2.         2.33333333]\n",
+      "[0.         0.33333333 0.66666667 1.         1.33333333 1.66666667]\n",
       "[0.         0.33333333 0.66666667 1.         1.33333333 1.66666667\n",
       " 2.        ]\n"
      ]
@@ -134,6 +135,8 @@
     "# Если мы хотим создать сетку, то лучше не использовать эту функцию\n",
     "# Смотрите сами, предположим нам нужны точки от 0 до 2 включительно c шагом 1/3:\n",
     "a = np.arange(0, 2 + 1/3, 1/3)\n",
+    "print(a)\n",
+    "a = np.arange(0, 2, 1/3)\n",
     "print(a)\n",
     "# Другое дело с np.linspace:\n",
     "a = np.linspace(0, 2, 7)\n",
@@ -161,7 +164,7 @@
       " [0.0e+000 4.9e-324 9.9e-324 1.5e-323 2.0e-323 2.5e-323 3.0e-323 3.5e-323\n",
       " 4.0e-323 4.4e-323]\n",
       "Тоже мусор, но разложенный по-другому:\n",
-      " [[4.67150117e-310 0.00000000e+000 0.00000000e+000 0.00000000e+000]\n",
+      " [[4.64744846e-310 0.00000000e+000 0.00000000e+000 0.00000000e+000]\n",
       " [0.00000000e+000 0.00000000e+000 0.00000000e+000 0.00000000e+000]\n",
       " [0.00000000e+000 0.00000000e+000 0.00000000e+000 0.00000000e+000]]\n"
      ]
@@ -269,9 +272,10 @@
       "[3.14159265 3.14159265 3.14159265 3.14159265 3.14159265 3.14159265\n",
       " 3.14159265 3.14159265]\n",
       "«Пустой» b:\n",
-      " [0.+0.00000000e+000j 0.+0.00000000e+000j 0.+0.00000000e+000j\n",
-      " 0.+0.00000000e+000j 0.+0.00000000e+000j 0.+0.00000000e+000j\n",
-      " 0.+0.00000000e+000j 0.+9.98225645e-307j]\n",
+      " [6.90356645e-310+4.64744779e-310j 1.82804289e-322-2.90787896e-067j\n",
+      " 8.30030285e-322+0.00000000e+000j 0.00000000e+000+0.00000000e+000j\n",
+      " 0.00000000e+000+4.45477374e-308j 2.15656973e-288+1.92249860e-305j\n",
+      " 3.08010774e-288+4.45033446e-308j 2.97583931e-288+2.77226745e-288j]\n",
       "Заполненный b:\n",
       " [0.        +3.14159265j 0.        +3.14159265j 0.        +3.14159265j\n",
       " 0.        +3.14159265j 3.14159265+1.j         3.14159265+1.j\n",
@@ -465,8 +469,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Теперь мы можем решить задание из приветливого теста с первого семинара"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2 11 12]\n",
+      " [ 5  6 15 16]]\n",
+      "\n",
+      "[[ 1  2 11 12]\n",
+      " [ 5  6 15 16]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reorder1(m):\n",
+    "    # Считаем, что матрица n x n, где n - четное\n",
+    "    n = m.shape[0]\n",
+    "    return np.hstack((m[:n//2, :n//2], m[n//2:, n//2:]))\n",
+    "\n",
+    "a = np.arange(1, 10).reshape(3, 3)\n",
+    "m = np.arange(1, 17).reshape(4, 4)\n",
+    "m1 = np.array([[1, 2, 11, 12,],\n",
+    "               [5, 6, 15, 16,]])\n",
+    "\n",
+    "print(m1)\n",
+    "print()\n",
+    "print(reorder1(m))\n",
+    "\n",
+    "assert np.array_equal(reorder1(m), m1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 9 10]\n",
+      " [13 14]\n",
+      " [ 3  4]\n",
+      " [ 7  8]\n",
+      " [11 12]]\n",
+      "\n",
+      "[[ 9 10]\n",
+      " [13 14]\n",
+      " [ 3  4]\n",
+      " [ 7  8]\n",
+      " [11 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reorder2(m):\n",
+    "    k = m.shape[0] // 4\n",
+    "    m1 = m[k*2:,  0:k*2]\n",
+    "    m2 = m[0:k*3, k*2:]\n",
+    "    return np.vstack([m1, m2])\n",
+    "\n",
+    "a = np.arange(1, 10).reshape(3, 3)\n",
+    "m = np.arange(1, 17).reshape(4, 4)\n",
+    "\n",
+    "m2 = np.array([[9, 10],\n",
+    "               [13, 14],\n",
+    "               [3, 4],\n",
+    "               [7, 8],\n",
+    "               [11, 12]])\n",
+    "\n",
+    "print(m2)\n",
+    "print()\n",
+    "print(reorder2(m))\n",
+    "\n",
+    "assert np.array_equal(reorder2(m), m2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -614,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -710,12 +802,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Теперь мы можем решить задания из приветливого теста с первого семинара"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_all(a):\n",
+    "    \"\"\"Возвращает сумму всех элементов\"\"\"\n",
+    "    return a.sum()\n",
+    "\n",
+    "def sum_columns(a):\n",
+    "    \"\"\"Сумма значений в колонках\"\"\"\n",
+    "    return a.sum(axis=0)\n",
+    "\n",
+    "def sum_rows(a):\n",
+    "    \"\"\"Сумма значений в строках\"\"\"\n",
+    "    return a.sum(axis=1)\n",
+    "\n",
+    "a = np.arange(1, 10).reshape(3, 3)\n",
+    "assert sum_all(a) == 45\n",
+    "assert np.array_equal(sum_columns(a), np.array([12, 15, 18]))\n",
+    "assert np.array_equal(sum_rows(a), np.array([6, 15, 24]))  # Исправление: 24 вместо 26"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Некоторые векторные операции"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1346,13 @@
       "15000  14.3465  265.8435     h  \n",
       "15001  40.4651  257.3290     h  \n",
       "15002   1.3387  113.8820     h  \n",
-      "15003  18.4264  290.5854     h  \n",
+      "15003  18.4264  290.5854     h  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "15004  39.3094  227.6133     h  \n",
       "\n",
       "Chunk 16\n",
@@ -1255,13 +1384,7 @@
       "17002  15.6930  216.9280     h  \n",
       "17003  12.9172  175.2180     h  \n",
       "17004  46.8970  153.7170     h  \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "Chunk 18\n",
       "         length    width    size    conc   conc1      asym   m3long  m3trans  \\\n",
       "18000   28.0590  11.3657  2.6604  0.4765  0.2940   -1.4959  23.0443  -8.6911   \n",
@@ -1322,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1725,7 @@
        "273.07037"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1628,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
