--- a/1_list_vs_dict.ipynb
+++ b/1_list_vs_dict.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
     "from time import monotonic\n",
     "from urllib.request import urlopen\n",
     "\n",
-    "with open('bar.txt') as f:\n",
+    "with open('bar.txt', encoding='utf-8') as f:\n",
     "    text = f.read()\n",
     "\n",
     "# Хорошо бы убрать знаки препинания, нормализовать падежи и привести все к одному регистру,\n",
@@ -194,18 +194,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.12"
   }
  },
  "nbformat": 4,
