Fixed file reading error in "iterator" part

--- a/1_list_vs_dict.ipynb
+++ b/1_list_vs_dict.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.857442791999802 seconds\n",
+      "11.169999999999959 seconds\n",
       "Most common word: и\n"
      ]
     }
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.008328355000230658 seconds\n",
+      "0.016000000000076398 seconds\n",
       "Most common word: и\n"
      ]
     }
@@ -117,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.003754159999971307 seconds\n",
+      "0.0 seconds\n",
       "Most common word: и\n"
      ]
     }
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.010588468000150897 seconds\n",
+      "0.014999999999986358 seconds\n",
       "Most common word: и\n"
      ]
     }
@@ -170,7 +170,7 @@
     "t = monotonic()\n",
     "\n",
     "c = Counter()\n",
-    "with open('bar.txt') as f:\n",
+    "with open('bar.txt', encoding='utf-8') as f:\n",
     "    for x in map(lambda x: x.split(), iter(f)):\n",
     "        c.update(x)\n",
     "\n",
