--- a/welcome_test/welcome_test_solution.ipynb
+++ b/welcome_test/welcome_test_solution.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "На первой паре 6 сентября 2019 проводился тест по Питону. Его оригинальное условие вы можете [найти на ГитХабе](https://github.com/pyoadfe/welcome_test).\n",
+    "На первой паре проводился тест по Питону. Его оригинальное условие вы можете [найти на ГитХабе](https://github.com/pyoadfe/welcome_test).\n",
     "\n",
-    "Здесь приводится решение этого теста, условия исправлены за опечатки."
+    "Здесь приводится возможное решение этого теста, условия исправлены за опечатки."
    ]
   },
   {
@@ -247,13 +247,6 @@
     "if __name__ == '__main__':\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -272,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.15"
   }
  },
  "nbformat": 4,
