--- a/list_vs_dict/list_vs_dict.ipynb
+++ b/list_vs_dict/list_vs_dict.ipynb
@@ -10,14 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FILENAME = 'lotr.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "В тексте примерно 21574 слов\n"
+      "0.09072392401867546 seconds\n",
+      "В тексте примерно 575230 слов\n"
      ]
     }
    ],
@@ -25,12 +35,17 @@
     "from time import monotonic\n",
     "from urllib.request import urlopen\n",
     "\n",
-    "with open('bar.txt', encoding='utf-8') as f:\n",
+    "t = monotonic()\n",
+    "\n",
+    "with open(FILENAME, encoding='utf-8') as f:\n",
     "    text = f.read()\n",
     "\n",
     "# Хорошо бы убрать знаки препинания, нормализовать падежи и привести все к одному регистру,\n",
     "# но делать это мы, конечно же, не будем\n",
     "words = text.split()\n",
+    "\n",
+    "print(monotonic() - t, 'seconds')\n",
+    "\n",
     "print('В тексте примерно', len(words), 'слов')"
    ]
   },
@@ -43,18 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11.169999999999959 seconds\n",
-      "Most common word: и\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = monotonic()\n",
     "\n",
@@ -80,18 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.016000000000076398 seconds\n",
-      "Most common word: и\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = monotonic()\n",
     "\n",
@@ -117,18 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0 seconds\n",
-      "Most common word: и\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import Counter\n",
     "\n",
@@ -151,18 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.014999999999986358 seconds\n",
-      "Most common word: и\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import Counter\n",
     "import itertools\n",
@@ -170,7 +149,7 @@
     "t = monotonic()\n",
     "\n",
     "c = Counter()\n",
-    "with open('bar.txt', encoding='utf-8') as f:\n",
+    "with open(FILENAME, encoding='utf-8') as f:\n",
     "    for x in map(lambda x: x.split(), iter(f)):\n",
     "        c.update(x)\n",
     "\n",
@@ -194,6 +173,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.15"
   }
  },
  "nbformat": 4,
