Evaluate list_vs_dict.ipynb

--- a/list_vs_dict/list_vs_dict.ipynb
+++ b/list_vs_dict/list_vs_dict.ipynb
@@ -58,9 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6312.383663704997 seconds\n",
+      "Most common word: the\n"
+     ]
+    }
+   ],
    "source": [
     "t = monotonic()\n",
     "\n",
@@ -86,9 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.17760252198786475 seconds\n",
+      "Most common word: the\n"
+     ]
+    }
+   ],
    "source": [
     "t = monotonic()\n",
     "\n",
@@ -114,9 +132,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.06992912999703549 seconds\n",
+      "Most common word: the\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "\n",
@@ -139,9 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.27445984599762596 seconds\n",
+      "Most common word: the\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "import itertools\n",
