--- a/numpy/numpy.ipynb
+++ b/numpy/numpy.ipynb
@@ -172,7 +172,7 @@
    ],
    "source": [
     "a = np.empty(10, dtype=float)\n",
-    "print('Тут лажеит «мусор», но не случайный:\\n', a)\n",
+    "print('Тут лежит «мусор», но не случайный:\\n', a)\n",
     "a = np.empty((3, 4))  # Можно указывать любой shape\n",
     "print('Тоже мусор, но разложенный по-другому:\\n', a)"
    ]
@@ -1994,7 +1994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.15"
   }
  },
  "nbformat": 4,
