--- a/welcome_test/welcome_test_solution.ipynb
+++ b/welcome_test/welcome_test_solution.ipynb
@@ -128,12 +128,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [`modules.py`](https://github.com/pyoadfe/welcome_test/blob/master/modules.py)"
+    "## [`oop.py`](https://github.com/pyoadfe/welcome_test/blob/master/oop.py)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/usr/bin/env python3\n",
+    "\n",
+    "class X:\n",
+    "    def __init__(self, *args):\n",
+    "        pass\n",
+    "    \n",
+    "    @property\n",
+    "    def prop(self):\n",
+    "        return 42\n",
+    "\n",
+    "    def fun(self):\n",
+    "        return 43\n",
+    "\n",
+    "class Y(X):\n",
+    "    pass\n",
+    "\n",
+    "def main():\n",
+    "    x = X(1, 2, 3) # сделайте, чтобы в этом месте не возникало исключение\n",
+    "\n",
+    "    assert x.prop == 42 # измените определение функции prop в классе X, чтобы в этом месте не возникало исключение\n",
+    "\n",
+    "    y = Y(1, 2, 3)\n",
+    "\n",
+    "    assert y.fun() == 43 # измените класс Y, чтобы в этом месте не возникало исключение\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [`modules.py`](https://github.com/pyoadfe/welcome_test/blob/master/modules.py)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
